[gd_scene load_steps=46 format=2]

[ext_resource path="res://sprites/Act1settings/scenethree/oh no.png" type="Texture" id=1]
[ext_resource path="res://sprites/Act1settings/scenethree/chair copy.png" type="Texture" id=2]
[ext_resource path="res://sprites/characters/right walk 8.png" type="Texture" id=3]
[ext_resource path="res://sprites/characters/right walk 5.png" type="Texture" id=4]
[ext_resource path="res://sprites/characters/idle right 1.png" type="Texture" id=5]
[ext_resource path="res://sprites/characters/idle right 2.png" type="Texture" id=6]
[ext_resource path="res://sprites/characters/right walk 3.png" type="Texture" id=7]
[ext_resource path="res://sprites/Act1settings/sceneone/vignette.png" type="Texture" id=8]
[ext_resource path="res://sprites/characters/right walk 4.png" type="Texture" id=9]
[ext_resource path="res://sprites/characters/right walk 7.png" type="Texture" id=10]
[ext_resource path="res://sprites/characters/right walk 2.png" type="Texture" id=11]
[ext_resource path="res://sprites/characters/right walk 6.png" type="Texture" id=12]
[ext_resource path="res://sprites/characters/fall.png" type="Texture" id=13]
[ext_resource path="res://sprites/characters/jump 1.png" type="Texture" id=14]
[ext_resource path="res://player.gd" type="Script" id=15]
[ext_resource path="res://Act1/playerscenes/scene3/doortime2.gd" type="Script" id=16]
[ext_resource path="res://sprites/UI/the-unseen/the unseen.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://sprites/Act1settings/scenethree/chest2/Untitled688-20200626202234.PNG" type="Texture" id=18]
[ext_resource path="res://sprites/Act1settings/scenethree/chest2/Untitled688-20200626201924.PNG" type="Texture" id=19]
[ext_resource path="res://sprites/Act1settings/scenethree/chest2/unnamed.png" type="Texture" id=20]
[ext_resource path="res://sprites/UI/dialoguebox.png" type="Texture" id=21]
[ext_resource path="res://sprites/UI/continuesprite.png" type="Texture" id=22]
[ext_resource path="res://Act1/playerscenes/scene3/dialoguebox3.gd" type="Script" id=23]
[ext_resource path="res://sounds/Closing-Squeaky-Door-1-www.fesliyanstudios.com.wav" type="AudioStream" id=24]
[ext_resource path="res://sounds/Squeaky-Wooden-Floor-Footsteps--Fast--www.fesliyanstudios.com.wav" type="AudioStream" id=25]
[ext_resource path="res://sounds/458587__inspectorj__ui-mechanical-text-scroll-03-fx-01-loop-[AudioTrimmer.com].wav" type="AudioStream" id=26]
[ext_resource path="res://sounds/255715__klankbeeld__horror-ambience-78-130322-00.wav" type="AudioStream" id=27]
[ext_resource path="res://sprites/Act1settings/scenethree/cuckoo_clock2/Untitled708-20200707165834.PNG" type="Texture" id=28]
[ext_resource path="res://sprites/Act1settings/scenethree/cuckoo_clock2/Untitled708-20200707165943.PNG" type="Texture" id=29]
[ext_resource path="res://sprites/Act1settings/scenethree/cuckoo_clock2/Untitled708-20200707165859.PNG" type="Texture" id=30]
[ext_resource path="res://sprites/Act1settings/scenethree/cuckoo_clock2/Untitled708-20200707165749.PNG" type="Texture" id=31]
[ext_resource path="res://Act1/playerscenes/scene3/dialoguebox.gd" type="Script" id=32]
[ext_resource path="res://Act1/playerscenes/scene3/SceneThree.gd" type="Script" id=33]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 11 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 4 ), ExtResource( 12 ), ExtResource( 10 ), ExtResource( 3 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 121.504
height = 271.631

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2133.89, 229.958 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 204.302, 1009.72 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 372.329, 1267.02 )

[sub_resource type="DynamicFont" id=6]
size = 100
font_data = ExtResource( 17 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 251.908, 974.119 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 20 ), ExtResource( 19 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 328.889, 387.147 )

[sub_resource type="DynamicFont" id=10]
size = 90
font_data = ExtResource( 17 )

[sub_resource type="Animation" id=11]
length = 2.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1560, -0.25, 0, 0.25, 0, 1590, -0.25, 0, 0.25, 0, 1560, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1, 2 )
}

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ ExtResource( 31 ), ExtResource( 28 ), ExtResource( 30 ), ExtResource( 29 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 28 ), ExtResource( 31 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 33 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 1929.39, 1081.27 )
scale = Vector2( 1.00489, 1 )
texture = ExtResource( 1 )

[node name="ParallaxBackground2" type="ParallaxBackground" parent="."]
layer = 1

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground2"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground2/ParallaxLayer"]
position = Vector2( 1921.11, 1076.2 )
scale = Vector2( 0.502446, 0.991381 )
texture = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 2884.37, 1640.13 )
scale = Vector2( 1.032, 0.973 )
texture = ExtResource( 2 )

[node name="player" type="KinematicBody2D" parent="."]
position = Vector2( 367.603, 68.3024 )
script = ExtResource( 15 )
__meta__ = {
"_edit_group_": true
}

[node name="playerSprite" type="AnimatedSprite" parent="player"]
position = Vector2( 2420.32, 1609.87 )
frames = SubResource( 1 )
animation = "fall"
speed_scale = 1.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
position = Vector2( 2404.15, 1637.61 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="player"]
position = Vector2( 2404.15, 1637.61 )
limit_left = 0
limit_top = 0
limit_right = 3640
limit_bottom = 2160

[node name="Walk" type="AudioStreamPlayer" parent="player"]
stream = ExtResource( 25 )
volume_db = -3.0

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 2127.64, 2161.27 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 3850.5, 1166.17 )
shape = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -221.829, 1216.89 )
shape = SubResource( 5 )

[node name="doortime2" type="Area2D" parent="."]
script = ExtResource( 16 )

[node name="Label2" type="Label" parent="doortime2"]
margin_left = 190.139
margin_top = 1121.82
margin_right = 1022.14
margin_bottom = 1699.82
custom_fonts/font = SubResource( 6 )
text = "peek (space)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D2" type="CollisionShape2D" parent="doortime2"]
position = Vector2( 0.00012207, 1023.36 )
shape = SubResource( 7 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="doortime2"]
stream = ExtResource( 24 )

[node name="chest" type="Area2D" parent="."]
script = ExtResource( 23 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="chest"]
position = Vector2( 1774.63, 1094.14 )
z_index = -1
frames = SubResource( 8 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="chest"]
position = Vector2( 1888.05, 1654.55 )
shape = SubResource( 9 )

[node name="dialoguebox" type="Control" parent="chest"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 32 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="chest/dialoguebox"]
margin_left = 1168.77
margin_top = 1528.99
margin_right = 2668.77
margin_bottom = 2028.99
texture = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="chest/dialoguebox"]
margin_left = 1288.0
margin_top = 1650.0
margin_right = 2564.0
margin_bottom = 1970.0
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continuesprite" type="Sprite" parent="chest/dialoguebox"]
position = Vector2( 1858.52, 1560 )
scale = Vector2( 1.11487, 2.15841 )
texture = ExtResource( 22 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="chest/dialoguebox/continuesprite"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 11 )

[node name="Tween" type="Tween" parent="chest/dialoguebox"]

[node name="type" type="AudioStreamPlayer" parent="chest/dialoguebox"]
stream = ExtResource( 26 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 27 )
autoplay = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1212.64, 1235.52 )
frames = SubResource( 12 )
frame = 6
playing = true
__meta__ = {
"_edit_lock_": true
}
[connection signal="body_entered" from="doortime2" to="doortime2" method="_on_doortime2_body_entered"]
[connection signal="body_exited" from="doortime2" to="doortime2" method="_on_doortime2_body_exited"]
[connection signal="body_entered" from="chest" to="chest" method="_on_chest_body_entered"]
[connection signal="body_entered" from="chest" to="chest/dialoguebox" method="_on_chest_body_entered"]
[connection signal="body_exited" from="chest" to="chest" method="_on_chest_body_exited"]
[connection signal="body_exited" from="chest" to="chest/dialoguebox" method="_on_chest_body_exited"]
[connection signal="tween_completed" from="chest/dialoguebox/Tween" to="chest/dialoguebox" method="_on_Tween_tween_completed"]
